--- a/.github/workflows/docker-build-check.yml
+++ b/.github/workflows/docker-build-check.yml
@@ -17,9 +17,9 @@ jobs:
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
-          failure-threshold: warning  # Fail on warnings too
-          format: tty                # Better formatting
-          no-fail: false            # Make sure it fails on issues
+          failure-threshold: warning
+          format: tty
+          no-fail: false
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -36,18 +36,10 @@ jobs:
 
       - name: Test container basic functionality
         run: |
-          # Test 1: Simple delay
+          # Test with minimal config
           echo "Testing simple delay compilation..."
           docker run --rm \
             -e USER_CODE='delay(1000);' \
-            -e ENVIRONMENT=local \
-            -e PIP_ID=test123 \
-            cpp-compiler:test
-          
-          # Test 2: LED blink
-          echo "Testing LED blink compilation..."
-          docker run --rm \
-            -e USER_CODE='digitalWrite(LED_BUILTIN, HIGH); delay(1000); digitalWrite(LED_BUILTIN, LOW); delay(1000);' \
             -e ENVIRONMENT=local \
             -e PIP_ID=test123 \
             cpp-compiler:test
