--- a/.github/workflows/docker-build-check.yml
+++ b/.github/workflows/docker-build-check.yml
@@ -9,6 +9,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Check shell script syntax
         run: |
           bash -n entrypoint.sh
@@ -34,26 +41,23 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Test container basic functionality
+      - name: Test staging and production environments
         run: |
-          # Test with minimal config
-          echo "Testing simple delay compilation..."
-          docker run --rm \
-            -v cpp-compiler-workspace:/workspace \
-            -e USER_CODE='delay(1000);' \
-            -e ENVIRONMENT=local \
-            -e PIP_ID=test123 \
-            cpp-compiler:test
+          # Create persistent volume for tests
+          docker volume create cpp-compiler-workspace
 
-      - name: Test different environments
-        run: |
-          for env in "local" "staging" "production"; do
+          for env in "staging" "production"; do
             echo "Testing $env environment..."
             docker run --rm \
               -v cpp-compiler-workspace:/workspace \
               -e USER_CODE='delay(1000);' \
               -e ENVIRONMENT=$env \
               -e PIP_ID=test123 \
+              -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+              -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+              -e AWS_DEFAULT_REGION=us-east-1 \
+              -e PRODUCTION_FIRMWARE_BUCKET=${{ secrets.PRODUCTION_FIRMWARE_BUCKET }} \
+              -e STAGING_FIRMWARE_BUCKET=${{ secrets.STAGING_FIRMWARE_BUCKET }} \
               cpp-compiler:test
           done
 
