--- a/.github/workflows/docker-build-check.yml
+++ b/.github/workflows/docker-build-check.yml
@@ -43,23 +43,26 @@ jobs:
 
       - name: Test staging and production environments
         run: |
-          # Create persistent volume for tests
-          docker volume create firmware-compiler-workspace
-
-          for env in "staging" "production"; do
-            echo "Testing $env environment..."
-            docker run --rm \
-              -v firmware-compiler-workspace:/workspace \
-              -e USER_CODE='delay(1000);' \
-              -e ENVIRONMENT=$env \
-              -e PIP_ID=test123 \
-              -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-              -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-              -e AWS_DEFAULT_REGION=us-east-1 \
-              -e PRODUCTION_FIRMWARE_BUCKET=${{ secrets.PRODUCTION_FIRMWARE_BUCKET }} \
-              -e STAGING_FIRMWARE_BUCKET=${{ secrets.STAGING_FIRMWARE_BUCKET }} \
-              firmware-compiler:test
-          done
+            # Create persistent volumes for tests
+            docker volume create firmware-compiler-workspace
+            docker volume create pio-cache
+  
+            # Test direct execution (entrypoint.sh)
+            for env in "staging" "production"; do
+              echo "Testing $env environment direct execution..."
+              docker run --rm \
+                -v firmware-compiler-workspace:/workspace \
+                -v pio-cache:/root/.platformio \
+                -e USER_CODE='delay(1000);' \
+                -e ENVIRONMENT=$env \
+                -e PIP_ID=test123 \
+                -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+                -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+                -e AWS_DEFAULT_REGION=us-east-1 \
+                -e PRODUCTION_FIRMWARE_BUCKET=${{ secrets.PRODUCTION_FIRMWARE_BUCKET }} \
+                -e STAGING_FIRMWARE_BUCKET=${{ secrets.STAGING_FIRMWARE_BUCKET }} \
+                firmware-compiler:test /app/entrypoint.sh  # Explicitly call entrypoint.sh
+            done
 
       - name: Cleanup
         if: always()
