--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "octokit": "^4.0.2"
   }
 }
