--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
+    "@types/unzipper": "^0.10.10",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^9.16.0",
@@ -36,6 +37,7 @@
   "dependencies": {
     "@octokit/auth-app": "^3.0.0",
     "@octokit/rest": "^21.0.2",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "unzipper": "^0.12.3"
   }
 }
