--- a/.github/workflows/docker-build-check.yml
+++ b/.github/workflows/docker-build-check.yml
@@ -58,6 +58,9 @@ jobs:
                   -v pio-cache:/root/.platformio \
                   -e ENVIRONMENT=$env \
                   -e SERVER_PORT=3001 \
+                  -e GITHUB_APP_ID=${{ secrets.GH_APP_ID }} \
+                  -e GITHUB_APP_PRIVATE_KEY="${{ secrets.GH_APP_PRIVATE_KEY }}" \
+                  -e GITHUB_INSTALLATION_ID=${{ secrets.GH_INSTALLATION_ID }} \
                   firmware-compiler:test)
 
                 # Wait for server to start
