--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,23 @@
 {
 	"compilerOptions": {
-	  /* Language and Environment */
-	  "target": "es2021",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-
-	  /* Modules */
-	  "module": "commonjs",                                /* Specify what module code is generated. */
-	  "rootDir": "./src",                                  /* Specify the root folder within your source files. */
-	  "moduleResolution": "Node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-	  "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-
-	  /* Emit */
-	  "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
-
-	  /* Interop Constraints */
-	  "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-	  "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-
-	  /* Type Checking */
-	  "strict": true,                                      /* Enable all strict type-checking options. */
-	  "strictNullChecks": true,                         /* When type checking, take into account 'null' and 'undefined'. */
-
-	  /* Completeness */
-	  "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+	  "target": "es2021",
+	  "module": "commonjs",
+	  "rootDir": "./",
+	  "moduleResolution": "Node",
+	  "baseUrl": "./",
+	  "outDir": "./dist",
+	  "esModuleInterop": true,
+	  "forceConsistentCasingInFileNames": true,
+	  "strict": true,
+	  "strictNullChecks": true,
+	  "skipLibCheck": true
 	},
 	"include": [
 	  "src/**/*",
-	  "./.eslint.config.mjs"
+	  "*.config.mjs"
 	],
 	"exclude": [
-	  "node_modules"
+	  "node_modules",
+	  "dist"
 	]
 }
