--- a/.github/workflows/docker-build-check.yml
+++ b/.github/workflows/docker-build-check.yml
@@ -9,12 +9,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+      # - name: Configure AWS Credentials
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: us-east-1
 
       - name: Check shell script syntax
         run: |
@@ -41,30 +41,66 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Test staging and production environments
-        run: |
-            # Create persistent volumes for tests
-            docker volume create firmware-compiler-workspace
-            docker volume create pio-cache
-  
-            # Test direct execution (entrypoint.sh)
-            for env in "staging" "production"; do
-              echo "Testing $env environment direct execution..."
-              docker run --rm \
-                -v firmware-compiler-workspace:/workspace \
-                -v pio-cache:/root/.platformio \
-                -e USER_CODE='delay(1000);' \
-                -e ENVIRONMENT=$env \
-                -e PIP_ID=test123 \
-                -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-                -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-                -e AWS_DEFAULT_REGION=us-east-1 \
-                -e PRODUCTION_FIRMWARE_BUCKET=${{ secrets.PRODUCTION_FIRMWARE_BUCKET }} \
-                -e STAGING_FIRMWARE_BUCKET=${{ secrets.STAGING_FIRMWARE_BUCKET }} \
-                firmware-compiler:test /app/entrypoint.sh  # Explicitly call entrypoint.sh
-            done
+      # - name: Test staging and production environments
+      #   run: |
+      #         # Create persistent volumes for tests
+      #         docker volume create firmware-compiler-workspace
+      #         docker volume create pio-cache
 
-      - name: Cleanup
-        if: always()
-        run: |
-          docker system prune -f
+      #         # Test server for each environment
+      #         for env in "staging" "production"; do
+      #           echo "Testing $env environment server..."
+
+      #           # Start the container in detached mode
+      #           CONTAINER_ID=$(docker run -d \
+      #             -p 3001:3001 \
+      #             -v firmware-compiler-workspace:/workspace \
+      #             -v pio-cache:/root/.platformio \
+      #             -e ENVIRONMENT=$env \
+      #             -e SERVER_PORT=3001 \
+      #             -e GITHUB_APP_ID=${{ secrets.GH_APP_ID }} \
+      #             -e GITHUB_APP_PRIVATE_KEY="${{ secrets.GH_APP_PRIVATE_KEY }}" \
+      #             -e GITHUB_INSTALLATION_ID=${{ secrets.GH_INSTALLATION_ID }} \
+      #             firmware-compiler:test)
+
+      #           # Debug: Print environment variables inside container
+      #           docker exec $CONTAINER_ID env
+
+      #           # Debug: Check if app can see the variables
+      #           docker exec $CONTAINER_ID node -e "console.log('GITHUB_APP_ID:', process.env.GITHUB_APP_ID)"
+      #           docker exec $CONTAINER_ID node -e "console.log('GITHUB_INSTALLATION_ID:', process.env.GITHUB_INSTALLATION_ID)"
+
+      #           # Wait for server to start
+      #           echo "Waiting for server to start..."
+      #           sleep 10
+
+      #           # Test health endpoint first
+      #           echo "Testing health endpoint..."
+      #           health_response=$(curl -s http://localhost:3001/health)
+      #           echo "Health check response: $health_response"
+
+      #           # Test compile endpoint
+      #           echo "Testing compile endpoint..."
+      #           compile_response=$(curl -X POST \
+      #             -H "Content-Type: application/json" \
+      #             -d '{"userCode":"delay(1000);","pipUUID":"test123"}' \
+      #             http://localhost:3001/compile)
+      #           echo "Compile response: $compile_response"
+
+      #           # Check if compile response indicates success
+      #           if echo "$compile_response" | grep -q '"success":false'; then
+      #             echo "Compilation failed in $env environment"
+      #             docker logs $CONTAINER_ID
+      #             docker stop $CONTAINER_ID
+      #             exit 1
+      #           fi
+                
+      #           # Stop the container
+      #           docker stop $CONTAINER_ID
+      #         done
+  
+      # - name: Cleanup
+      #   if: always()
+      #   run: |
+      #       docker system prune -f
+      #       docker volume rm firmware-compiler-workspace pio-cache
