--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
+    "@types/unzipper": "^0.10.10",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^9.16.0",
-    "eslint-plugin-security": "^3.0.1",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "@octokit/auth-app": "^6.1.3",
+    "@octokit/rest": "^20.1.1",
+    "express": "^4.21.2",
+    "unzipper": "^0.12.3"
   }
 }
