Start steps for local compilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 	  "target": "es2021",
 	  "module": "commonjs",
-	  "rootDir": "./",
+	  "rootDir": "./src",
 	  "moduleResolution": "Node",
 	  "baseUrl": "./",
 	  "outDir": "./dist",
